[gd_scene load_steps=29 format=2]

[ext_resource path="res://recursos/Players/bunny2_jump.png" type="Texture" id=1]
[ext_resource path="res://recursos/Players/bunny2_ready.png" type="Texture" id=2]
[ext_resource path="res://recursos/Environment/ground_grass_small.png" type="Texture" id=3]
[ext_resource path="res://recursos/Players/bunny2_stand.png" type="Texture" id=4]
[ext_resource path="res://recursos/Fonts/Kenney Future.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://juego/menu/botones/BotonMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://juego/menu/MenuPrincipal.gd" type="Script" id=7]
[ext_resource path="res://recursos/Environment/cactus.png" type="Texture" id=8]
[ext_resource path="res://recursos/Fonts/Kenney Blocks.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://juego/menu/botones/BotonSalir.gd" type="Script" id=10]
[ext_resource path="res://recursos/Background/bg_layer1.png" type="Texture" id=11]
[ext_resource path="res://recursos/Background/bg_layer4.png" type="Texture" id=12]
[ext_resource path="res://recursos/Background/bg_layer2.png" type="Texture" id=13]
[ext_resource path="res://recursos/Background/bg_layer3.png" type="Texture" id=14]
[ext_resource path="res://recursos/Fonts/Kenney Mini Square Mono.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://juego/menu/botones/btn_salir_normal.tres" type="StyleBox" id=16]
[ext_resource path="res://recursos/Players/bunny1_ready.png" type="Texture" id=17]
[ext_resource path="res://recursos/Players/bunny1_stand.png" type="Texture" id=18]
[ext_resource path="res://recursos/Players/bunny1_jump.png" type="Texture" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "player1",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "player2",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
length = 2.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/bunny2_jump:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/bunny2_jump:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 1.4, 1.8, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 344.496, 464.552 ), Vector2( 344.496, 193.413 ), Vector2( 344.496, 193.413 ), Vector2( 344.496, 464.552 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprites/bunny2_jump:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1, 1.4, 1.8, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 360.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprites/bunny1_jump:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "animacion_player2"
length = 2.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/bunny1_jump:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/bunny1_jump:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 1.4, 1.8, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 344.496, 464.552 ), Vector2( 344.496, 193.413 ), Vector2( 344.496, 193.413 ), Vector2( 344.496, 464.552 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/bunny1_jump:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1, 1.4, 1.8, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 360.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimatedSprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprites/bunny2_jump:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=4]
size = 46
outline_size = 6
outline_color = Color( 0.992157, 0.992157, 0.980392, 1 )
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.301961, 0.0941176, 0.431373, 1 )
border_width_bottom = 8
border_color = Color( 0.87451, 0.227451, 0.054902, 1 )
shadow_color = Color( 0.47451, 0.470588, 0.470588, 0.6 )

[sub_resource type="DynamicFont" id=6]
size = 18
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 22
outline_size = 2
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=8]
size = 18
outline_size = 2
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=9]
size = 18
outline_size = 2
font_data = ExtResource( 15 )

[node name="MenuPrincipal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.24492
margin_bottom = -2.24493
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
nivel_inicio = "res://juego/niveles/Nivel-01.tscn"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_base_offset = Vector2( 0, -1050 )

[node name="ParallaxFondo" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 1 )
motion_mirroring = Vector2( 2048, 2048 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxFondo"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxNubesLejanas" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( -109.49, -702.242 )
motion_scale = Vector2( 0.3, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxNubesLejanas"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxNubesMedias" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( -600.304, -928.772 )
motion_scale = Vector2( 0.6, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxNubesMedias"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxNubesCercanas" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( -234.081, -860.813 )
motion_mirroring = Vector2( 2048, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxNubesCercanas"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.145098, 0.388235, 0.807843, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprites" type="Node" parent="."]

[node name="cactus" type="Sprite" parent="Sprites"]
modulate = Color( 0.584314, 0.678431, 0.509804, 0.454902 )
position = Vector2( 202.999, 463.684 )
texture = ExtResource( 8 )

[node name="bunny1_jump" type="Sprite" parent="Sprites"]
visible = false
position = Vector2( 344.496, 464.552 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 20 )

[node name="bunny2_jump" type="Sprite" parent="Sprites"]
visible = false
position = Vector2( 344.496, 464.552 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="Plataforma" type="Sprite" parent="Sprites"]
position = Vector2( 315, 563.755 )
scale = Vector2( 1.5, 0.5 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 344.542, 465.647 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 1 )
animation = "player1"
frame = 1
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "animacion_menu"
anims/animacion_menu = SubResource( 2 )
anims/animacion_player2 = SubResource( 3 )

[node name="MenuPrincipal" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -236.0
margin_top = 101.0
margin_right = 236.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.67451, 0.345098, 0.823529, 1 )
text = "Menu Principal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -561.0
margin_top = -90.0
margin_right = -276.0
margin_bottom = 224.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonIniciar" parent="VBoxContainer" instance=ExtResource( 6 )]
margin_right = 285.0
margin_bottom = 94.0
text = "Iniciar Juego "

[node name="BotonCambiarPlayer" parent="VBoxContainer" instance=ExtResource( 6 )]
margin_top = 109.0
margin_right = 285.0
margin_bottom = 203.0
text = "Cambiar Personaje"

[node name="BotonSalir" parent="VBoxContainer" instance=ExtResource( 6 )]
margin_top = 218.0
margin_right = 285.0
margin_bottom = 314.0
custom_styles/hover = SubResource( 5 )
custom_styles/normal = ExtResource( 16 )
custom_fonts/font = SubResource( 6 )
text = "Salir"
script = ExtResource( 10 )

[node name="VBoxContainerFooter" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -313.0
margin_top = -97.0
margin_right = 313.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Footer" type="Label" parent="VBoxContainerFooter"]
margin_right = 626.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.745098, 0.341176, 0.341176, 1 )
text = "Trabajo Final Integrador"
align = 1

[node name="Footer2" type="Label" parent="VBoxContainerFooter"]
margin_top = 32.0
margin_right = 626.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.745098, 0.341176, 0.341176, 1 )
text = "Informatorio - Pixel Lab"
align = 1

[node name="Footer3" type="Label" parent="VBoxContainerFooter"]
margin_top = 59.0
margin_right = 626.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.584314, 0.0705882, 0.0705882, 1 )
text = "by HARDY Christian R."
align = 1
[connection signal="pressed" from="VBoxContainer/BotonIniciar" to="." method="_on_BotonIniciar_pressed"]
[connection signal="pressed" from="VBoxContainer/BotonCambiarPlayer" to="." method="_on_BotonCambiarPlayer_pressed"]
[connection signal="pressed" from="VBoxContainer/BotonSalir" to="VBoxContainer/BotonSalir" method="_on_BotonSalir_pressed"]
